searched result on mobile UI fixed

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -269,6 +269,7 @@ b {
   .globalNav {
     position: unset;
     top: 0;
+    display: block !important;
   }
 }
 
